--- a/assets/css/componnents/boxes/header-box.css
+++ b/assets/css/componnents/boxes/header-box.css
@@ -64,6 +64,9 @@
         flex-direction: column;
         align-items: center;
     }
+    .header-box__buttons a {
+        width: 100%;
+    }
   }
 
 .header-box_btn{
