--- a/assets/css/componnents/buttons/buttons.css
+++ b/assets/css/componnents/buttons/buttons.css
@@ -1,7 +1,8 @@
 
 :root{
-    --btn-gradient: linear-gradient(90deg, #164a99 0%, #45E2C6 100%);
+    --btn-gradient: linear-gradient(90deg, #bf6514 0%, #5b4143 100%);
     --transparent-btn: rgba(255, 255, 255, 0.1);
+    --btn-no-bg-color: #b2601a;
     --btn-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -29,9 +30,10 @@
 
 .btn-no-bg {
     background: none;
+    color: var(--btn-no-bg-color);
     border: 4px solid transparent;
     border-radius: 10px;
-    border: 2px solid #45E2C6;
+    border: 2px solid var(--btn-no-bg-color);
 }
 
 /*btn with icon*/
