--- a/assets/css/sections/reservation-confirmation.css
+++ b/assets/css/sections/reservation-confirmation.css
@@ -1,4 +1,4 @@
-section.reservation-result-section {
+.reservation-result-section {
     width: 100%;
     margin-top: 50px;
     margin-bottom: 50px;
