--- a/assets/css/sections/sections.css
+++ b/assets/css/sections/sections.css
@@ -2,3 +2,12 @@
 @import url(reservation-confirmation.css);
 @import url(reservation-section.css);
 @import url(why-us-section.css);
+@import url(gallery-section.css);
+@import url(brand-type-section.css);
+@import url(latest-arrivals-section.css);
+
+
+
+section {
+    padding: 30px 0px !important;
+}
