--- a/assets/css/componnents/navigation/navigation.css
+++ b/assets/css/componnents/navigation/navigation.css
@@ -1,8 +1,8 @@
 :root {
     --links--nav--size: 20px;
-    --link--accent-color: purple;
-    --primary-link-color-nav: white;
-    --dropdown--menu__color: rgba(255, 255, 255, .4);
+    --link--accent-color: rgb(197, 143, 197);
+    --primary-link-color-nav: rgb(196, 132, 53);
+    --dropdown--menu__color: rgba(255, 255, 255, 0.6);
 }
 
 /*body of nav*/
@@ -21,6 +21,9 @@ nav {
     height: 140px;
     gap: 10px;
     align-items: center;
+
+    animation: fadeIn 1s ease-in-out forwards; /* Duration and easing function */
+    opacity: 0;
 }
 
 .logo h2{
@@ -37,6 +40,9 @@ nav {
 .page-links {
     display: flex;
     gap: 5px;
+
+    animation: fadeIn 1.5s ease-in-out forwards; /* Duration and easing function */
+    opacity: 0;
 }
 
 
@@ -56,6 +62,9 @@ a.nav-btn.active-nav-btn {
     display: flex;
     align-items: center;
     gap: 20px;
+
+    animation: fadeIn 3s ease-in-out forwards; /* Duration and easing function */
+    opacity: 0;
 }
 
 .contact-btn {
