--- a/assets/css/general/animation/animation.css
+++ b/assets/css/general/animation/animation.css
@@ -1,5 +1,6 @@
 @import url(hover.css);
 @import url(sliders/sliders.css);
+@import url(effects/effects.css);
 
 
 
@@ -28,28 +29,7 @@
 
 
 
-/*TYPING-ANIMATION*/
-  
-  /* The typing effect */
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
-    from, to { border-color: transparent }
-  }
 
-/*   .intro-slogan */
-/* .dynamic-writing, */
- .dynamic-writing {
-    border-right: .15em solid orange;
-    white-space: nowrap;
-    animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
-}
 
 
 /* Define the 3D swinging animation */
