--- a/assets/css/general/variables/variables.css
+++ b/assets/css/general/variables/variables.css
@@ -1,6 +1,5 @@
 :root {
-    /* --main-bg-color: linear-gradient(45deg, #1E90FF, #4682B4, #5F9EA0, #87CEEB); */
-    --main-bg-color: linear-gradient(125deg, #a39b9b 25%, hsl(202, 57%, 60%) 50%, #b6c3d7 75%, #d5e6f1 30%);
+    --main-bg-color: linear-gradient(125deg, #ffffff 25%, hsl(0deg 0% 100%) 50%, #b6c3d7 75%, #d5e6f1 30%);
     --main-footer-color: linear-gradient(to top, #152531, #375f81, #3a86c9);
     --small-section-bg: rgb(196 204 209);    ;
 }
