--- a/assets/css/utils/utils.css
+++ b/assets/css/utils/utils.css
@@ -34,6 +34,12 @@
     justify-content: center;
     align-items: center;
 }
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
 .flex-column-center {
     display:flex;
     flex-direction: column;
@@ -77,6 +83,15 @@
 /*gap*/
 .gap50 {
     gap: 50px;
+}
+.gap40 {
+    gap: 40px;
+}
+.gap30 {
+    gap: 30px;
+}
+.gap20 {
+    gap: 20px;
 }
 
 /*structure*/
