--- a/assets/css/componnents/components.css
+++ b/assets/css/componnents/components.css
@@ -1,3 +1,6 @@
+/*GRID*/
+@import url(grid/grid.css);
+/*FORMS*/
 @import url(form/form.css);
 /*footer*/
 @import url(footer.css);
@@ -8,6 +11,8 @@
 
 /*tables*/
 @import url(tables/table.css);
+
+
 
 /*buttons*/
 @import url(buttons/buttons.css);
