--- a/assets/css/sections/latest-arrivals-section.css
+++ b/assets/css/sections/latest-arrivals-section.css
@@ -21,6 +21,11 @@
 
 .latest-arrival-car-card {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 5px;
+    padding: 10px;
     background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -36,7 +41,7 @@
 .latest-arrival-car-card h3 {
     font-size: 18px;
     font-weight: 600;
-    padding: 15px;
+    padding: 5px;
     color: #333;
     text-transform: uppercase;
     margin-bottom: 0;
@@ -46,25 +51,29 @@
     width: 100%;
     height: auto;
     display: block;
+    border-radius: 5px;
 }
 
 .car-details {
-    padding: 15px;
     font-size: 14px;
     color: #666;
 }
 
 .car-details p {
     margin: 5px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .car-details span {
     font-weight: 600;
+    text-align: right;
     color: #000;
 }
 
 .btn-view-vehicle {
     display: inline-block;
+    width: 100%;
     background-color: #000;
     color: #fff;
     padding: 10px 20px;
@@ -72,7 +81,6 @@
     text-transform: uppercase;
     font-weight: 600;
     border-radius: 5px;
-    margin: 15px;
     text-align: center;
     border: none;
     cursor: pointer;
