adding the responsive nav and loader

--- a/assets/css/componnents/footer.css
+++ b/assets/css/componnents/footer.css
@@ -9,6 +9,10 @@
     background-color: var(--footer-bg)
   }
   /*logo*/
+
+  .logo-img {
+    width: 100px;
+}
   .logo-row {
     display: flex;
   }
