--- a/assets/css/general/animation/animation.css
+++ b/assets/css/general/animation/animation.css
@@ -2,6 +2,7 @@
 @import url(sliders/sliders.css);
 @import url(effects/effects.css);
 @import url(onscroll/onscroll.css);
+@import url(loader/loader.css);
 
 
 
