--- a/assets/css/componnents/navigation/navigation.css
+++ b/assets/css/componnents/navigation/navigation.css
@@ -1,304 +1,155 @@
-:root {
-    --links--nav--size: 20px;
-    --link--accent-color: rgb(197, 143, 197);
-    --primary-link-color-nav: rgb(196, 132, 53);
-    --dropdown--menu__color: rgba(255, 255, 255, 0.6);
-    --nav-box-shadow: 0 4px 2px -2px #e1e1e1;
-}
 
-/*body of nav*/
-nav {
-    padding: 20px;
+@import url(nav.css);
+/* * {
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  nav {
+    padding: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    box-shadow: var(--nav-box-shadow);
-    margin-bottom: 10px;
-}
-
-
-/*Logo*/
-.logo {
-    display: flex;
-    width: 140px;
-    height: 140px;
-    gap: 10px;
-    align-items: center;
-
-    animation: fadeIn 1s ease-in-out forwards; /* Duration and easing function */
-    opacity: 0;
-}
-
-.logo h2{
-    width: 50%;
-    color: var(--primary-link-color-nav);
-}
-
-.logo-img img{
-    border-radius: 50%;
-    opacity: 80%;
-}
-
-/*page links*/
-.page-links {
-    display: flex;
-    gap: 5px;
-
-    animation: fadeIn 1.5s ease-in-out forwards; /* Duration and easing function */
-    opacity: 0;
-}
-
-
-a.nav-btn.active-nav-btn {
-    color: var(--primary-link);
-}
-
-.page-links a {
-    color: var(--primary-link-color-nav);
-    padding: 10px;
-    cursor: pointer;
-    font-size: var(--links--nav--size);
-}
-
-/*button contact*/
-.contact-us {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-
-    animation: fadeIn 3s ease-in-out forwards; /* Duration and easing function */
-    opacity: 0;
-}
-
-.contact-btn {
-    padding: 20px;
-    background-color: var(--primary-link);
-    color: var(--primary-link-color-nav);
-    font-size: var(--links--nav--size);
-    font-weight: bold;
-    border-radius: 10px;
-}
-
-/*greet user*/
-.greet-user {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: var(--links--nav--size);
-    color: var(--primary-link-color-nav);
-}
-
-.greet-user span {
-    font-style: italic;
-    color: var(--link--accent-color);
-}
-
-.greet-user-img {
-    display: flex;
-    width: 100px;
-    height: 100px;
-}
-
-.greet-user-img img{
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-/*animation*/
-.greet-user:hover,
-.logo h2:hover,
-.logo-img img:hover,
-.contact-btn:hover,
-.page-links a:hover {
-    transition: all 1s;
-}
-
-.greet-user:hover,
-.logo h2:hover,
-.logo-img img:hover,
-.contact-btn:hover,
-.page-links a:hover {
-    scale: 0.9;
-}
-
-.logo h2:hover,
-.page-links a:hover {
-    scale: 0.9;
-    color: orange;
-}
-
-/*dropdown*/
-/* Dropdown Container */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Trigger (a tag styled as a button) */
-.dropdown-btn {
-    background-color: var(--primary-link);
-    color: white;
-    padding: 14px 20px;
-    font-size: 16px;
-    text-decoration: none;
-    border-radius: 4px;
-    cursor: pointer;
-    display: inline-block;
-}
-
-/* Style for the dropdown content (hidden by default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: var(--general-color-forms);
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     z-index: 1;
-}
-
-/* Style for links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Hover effect for dropdown links */
-
-a.dropdown-btn:hover {
-    color: white;
-}
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-/* Show the dropdown content on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change background color on hover for the dropdown trigger */
-.dropdown:hover .dropdown-btn {
-    background-color: orange;
-}
-
-
-
-
-/*---------------------NAVIGATION RESPONSIVE MOBILE-------------------*/
-
-.visible-menu {
-    display: block;
-}
-.invisible-menu {
-    display: none;
-}
-
-.toggle_btn img {
-    width: 40px;
-    height: 40px;
-}
-
-.toggle_btn {
-    cursor: pointer;
-    display: none;
-}
-
-
-/*dropdown-menu*/
-/*dropdown_menu*/
-
-.dropdown_menu {
-    display: none;
-    margin-top: 20px;
-    position: absolute;
-    padding: 20px;
-    right: 0px;
-    top: 100px;
-    width: 300px;
-    background: var(--dropdown--menu__color);
-    z-index: 5; 
-    border-radius: 0px 0px 20px 20px;
-}
-
-/*colors*/
-.dropdown_menu li a {
-    color: var(--general-p-color);
-    font-size: 20px;
-    font-weight: bold;
-}
-
-/*When we click on the toggle btn we add the class to display the menu (mobile)*/
-.dropdown_menu.close {
-    display: none;
-}
-.dropdown_menu.open {
-    display: block;
-}
-
-
-.dropdown_menu li {
-    padding: 10px;
-    color: var(--primary-link-color-nav);
+    margin-bottom: 10px;
+  }
+  nav .logo {
     display: flex;
     align-items: center;
+  }
+  nav .logo img {
+    height: 100px;
+    width: auto;
+    margin-right: 10px;
+  }
+  nav .logo h1 {
+    font-size: 30px;
+    background: linear-gradient(to right, #b927fc 0%, #2c64fc 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+  }
+  nav ul li {
+    margin-left: 30px;
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 4px 8px;
+    border-radius: 5px;
+  }
+  
+  nav ul li a:hover {
+    background-color: #f5f5f5;
+  }
+  
+  .hamburger {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .hamburger .line {
+    width: 25px;
+    height: 1px;
+    background-color: #1f1f1f;
+    display: block;
+    margin: 7px auto;
+    transition: all 0.3s ease-in-out;
+  }
+  .hamburger-active {
+    transition: all 0.3s ease-in-out;
+    transition-delay: 0.6s;
+    transform: rotate(45deg);
+  }
+  
+  .hamburger-active .line:nth-child(2) {
+    width: 0px;
+  }
+  
+  .hamburger-active .line:nth-child(1),
+  .hamburger-active .line:nth-child(3) {
+    transition-delay: 0.3s;
+  }
+  
+  .hamburger-active .line:nth-child(1) {
+    transform: translateY(12px);
+  }
+  
+  .hamburger-active .line:nth-child(3) {
+    transform: translateY(-5px) rotate(90deg);
+  }
+  
+  .menubar {
+    position: absolute;
+    top: 0;
+    left: -60%;
+    display: flex;
     justify-content: center;
-}
+    align-items: flex-start;
+    width: 60%;
+    height: 100vh;
+    padding: 20% 0;
+    background: rgba(255, 255, 255);
+    transition: all 0.5s ease-in;
+    z-index: 2;
+  }
+  .active {
+    left: 0;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  }
+  
+  .menubar ul {
+    padding: 0;
+    list-style: none;
+  }
+  .menubar ul li {
+    margin-bottom: 32px;
+  }
+  
+  .menubar ul li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 95%;
+    font-weight: 400;
+    padding: 5px 10px;
+    border-radius: 5px;
+  }
+  
+  .menubar ul li a:hover {
+    background-color: #f5f5f5;
+  }
 
-.dropdown_menu .action_btn {
-    width: 50%;
-    background-color: var(--btn-primary);
-    padding: 10px;
-    border-radius: 10px;
-    color: white;
-    text-align: center;
-}
-
-
-/*Navigation pour les telephones*/
-
-@media (max-width: 1000px) {
-    /*logo*/
-    .logo__image {
-        width: 80px;
+  @media screen and (max-width: 890px) {
+    nav .logo h1 {
+      display: none;
     }
-
-    nav {
-        justify-content: space-between;
+  }
+  @media screen and (max-width: 790px) {
+    .hamburger {
+      display: block;
     }
-    .logo__title {
-        display: block;
-        width: 50%;
+    nav ul {
+      display: none;
     }
-    /*menu content*/
-    .greet-user,
-    .contact-us .btn,
-    .page-links {
-        display: none;
+    
+    /*padding nav*/
+    /* nav {
+      padding: 30px;
     }
-
-    .toggle_btn {
-        display: block;
-    }
-    /*dropdown-connection btns*/
-
-     .dropdown_menu .action_btn {
-        display: block;
-        width: 100%;
-        padding: 15px;
-        margin-bottom: 10px;
-    } 
-}
-
-@media (max-width: 550px) {
-
-    .dropdown_menu {
-       margin-top: 0;
-       left: 0px;
-       right: 0px;
-       top: 140px;
-       width: unset;
-   } 
-
-}
+  }  */
