--- a/assets/css/sections/sections.css
+++ b/assets/css/sections/sections.css
@@ -5,6 +5,7 @@
 @import url(gallery-section.css);
 @import url(brand-type-section.css);
 @import url(latest-arrivals-section.css);
+@import url(header-img.css);
 
 
 /*SLIDERS*/
