--- a/assets/css/componnents/form/form.css
+++ b/assets/css/componnents/form/form.css
@@ -2,6 +2,9 @@
 @import url(authform.css);
 @import url(searchform.css);
 
+/*filters*/
+@import url(filters/filters.css);
+
 /*general color for forms*/
 :root {
     --general-color-forms: rgba(0, 0, 0, 0.04);
