adding the catalog responsive

--- a/assets/css/componnents/boxes/cards/car-card.css
+++ b/assets/css/componnents/boxes/cards/car-card.css
@@ -139,4 +139,15 @@
 
 
 
+@media (max-width: 600px) {
+    .type-car {
+        width: 50%;
+    }
+    .card-car-footer {
+        overflow: overlay;
+    }
 
+    .card-car-footer__item {
+        padding: 10px;
+    }
+}
