--- a/assets/css/sections/header-img.css
+++ b/assets/css/sections/header-img.css
@@ -37,3 +37,11 @@
     color: #ccc;
 }
 
+
+
+@media (max-width: 800px) {
+    .header-overlay h1 {
+        font-size: 28px;
+        margin-bottom: 10px;
+    }
+}
