--- a/assets/css/componnents/form/filters/filters.css
+++ b/assets/css/componnents/form/filters/filters.css
@@ -25,6 +25,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+
 .filter-form {
     display: flex;
     justify-content: space-between;
@@ -44,4 +45,28 @@
 /*btn*/
 .filter-form .btn {
     width: 50%;
+}
+
+
+
+@media (max-width: 1300px) {
+    .filter-container {
+        padding: 20px;
+        max-width: 70%;
+    }
+}
+
+@media (max-width: 800px) {
+    .filter-container {
+        max-width: 90%;
+    }
+    .filter-form {
+        flex-direction: column;
+    }
+
+    .filter-form select,
+    .filter-form .btn {
+        display: flex;
+        width: 100%;
+    }
 }
