--- a/assets/css/componnents/boxes/cards/car-card.css
+++ b/assets/css/componnents/boxes/cards/car-card.css
@@ -1,5 +1,5 @@
 :root {
-    --main-card-car-color: #7fbbb3;
+    --main-card-car-color: #7891b8;
     --border-solid-card: 1px solid rgb(227, 227, 227);
     --border-radius-card: 10px;
 }
@@ -14,6 +14,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    opacity: 0;
+    animation: fadeIn 3s ease-in-out forwards;
 }
 
 .card-car-img {
